--- a/src/components/DashboardComponents/DashboardWrapper/styles.css
+++ b/src/components/DashboardComponents/DashboardWrapper/styles.css
@@ -5,6 +5,13 @@
   margin-right: auto;
 }
 
+.tabs-wrapper {
+  width: 100vw;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .grid-flex {
   display: flex;
   width: 100%;
@@ -32,6 +39,7 @@
     padding-right: 1.5rem;
   }
 }
+
 @media only screen and (max-width: 800px) {
   .list-table {
     padding-top: 0.5rem;
