--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ td {
 }
 
 .coin-page-div {
-  padding: 1rem 0rem 1rem 2rem;
+  padding: 1rem;
   margin: 1rem 3rem;
   background-color: var(--darkgrey);
   border-radius: 1rem;
@@ -90,6 +90,7 @@ td {
 .description h2 {
   margin-top: 0;
   margin-bottom: 1rem;
+  text-transform: capitalize;
 }
 
 .description a:hover {
@@ -101,10 +102,37 @@ td {
   color: var(--white) !important;
   margin: 1rem;
   border-color: var(--white) !important;
-  /* background-color: #1b1b1b; */
+}
+
+.top-button {
+  position: fixed;
+  right: 2rem;
+  bottom: 2rem;
+  border: 2px solid var(--blue);
+  border-radius: 50%;
+  color: var(--blue);
+  font-size: 2rem !important;
+  height: 3rem !important;
+  width: 3rem !important;
+  padding: 0.5rem;
+  cursor: pointer;
+  background-color: var(--darkgrey);
+}
+
+.toggle-flex {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin: 2rem 0rem;
 }
 
 @media only screen and (max-width: 800px) {
+  .toggle-flex {
+    justify-content: flex-start;
+    margin: 1rem 0rem;
+  }
+
   p {
     font-size: 80%;
   }
@@ -117,5 +145,12 @@ td {
   .description h2 {
     margin-top: 0;
     margin-bottom: 0.8rem;
+  }
+  .select-days {
+    max-width: 90px;
+  }
+  .top-button {
+    right: 1rem;
+    bottom: 1rem;
   }
 }
